ajax request for updating a post works

--- a/public/index.html
+++ b/public/index.html
@@ -58,23 +58,47 @@
 <br>
 <br>
 <br>
-<!-- 	underscore template for new posts
- -->	<div id="posts-section">
-		<script type="text/template" id="post-template">
-		<div class="row postBox">
+
+<div id="posts-section">
+
+	<!-- underscore template to create new notes -->
+	<script type="text/template" id="post-template">
+	<div class="postBox note" id="note-<%= id %>" data-id="<%= id %>">
+		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
-				<div class="panel panel-default">
+				<div class="panel note panel-default">
 				  <div class="panel-body">
+				  		<!-- edit link (pencil icon) to toggle form -->
+				        <a class="edit-pencil" data-toggle="collapse" data-target="#update-<%= id %>">
+				          <span class="glyphicon glyphicon-pencil edit pull-right"></span>
+				        </a>
 				   <h3><%=title%></h3>
 				   <p><%=content%></p>
 				  </div>
 				</div>
 			</div>
-		</script>
+		</div>
+
+	  <!-- form to update notes -->
+	  <div class="collapse" id="update-<%= id %>">
+	    <div class="panel edit panel-default">
+	  	  <div class="panel-body">
+	        <br>
+	        <form class="form-inline update-note" >
+	          <input type="text" class="form-control updated-title" value="<%= title %>" placeholder="Edited title">
+	          <input type="text" class="form-control updated-content" value="<%= content %>" placeholder="Edited note">
+	          <input type="submit" class="btn btn-default" value="Update note">
+	        </form>
+	      </div>
+	    </div>
+	  </div>
+	</script>
 		<!-- end of template -->
+</div> 
+
 
 		<!-- welcome note when no posts are visible  -->
-		<div class="row welcome">
+		<div class="row welcome display">
 			<div class="panel panel-default col-md-10 col-md-offset-1">
 			  <div class="panel-body">
 			    <h3>Welcome to Kudos!</h3>
@@ -85,9 +109,9 @@
 			  </div>
 			</div>
 		</div>
-	</div>
 
- <!-- end of container -->
+
+ <!-- end of posts section -->
 </div>
 	 
 	 	<!-- jquery cdn -->
