--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
 
 	<!-- Google Fonts for Paragraphs -->
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-	
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>	
 	<!-- customized styles -->
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
@@ -48,9 +47,9 @@
 				  </div>
 				  <div class="form-group">
 				    <label for="postContent">Post</label>
-				    <input input class="form-control" id="postContent" placeholder="What is your message?" autofocus>
+				    <textarea input class="form-control" rows="3" id="postContent" placeholder="What is your message?" autofocus> </textarea>
 				  </div>
-				  <button type="submit" class="btn btn-default">Submit</button>
+				  <button type="submit" class="btn btn-default pull-right">Submit</button>
 				</form>
 		</div>
 	</div>
@@ -72,8 +71,10 @@
 				        <a class="edit-pencil" data-toggle="collapse" data-target="#update-<%= id %>">
 				          <span class="glyphicon glyphicon-pencil edit pull-right"></span>
 				        </a>
-				   <h3><%=title%></h3>
-				   <p><%=content%></p>
+				    <div class="col-sm-8 col-sm-offset-2">
+					   <h3><%=title%></h3>
+					   <p><%=content%></p>
+					 </div>
 				  </div>
 				</div>
 			</div>
@@ -87,7 +88,7 @@
 	        <form class="form-inline update-note" >
 	          <input type="text" class="form-control updated-title" value="<%= title %>" placeholder="Edited title">
 	          <input type="text" class="form-control updated-content" value="<%= content %>" placeholder="Edited note">
-	          <input type="submit" class="btn btn-default" value="Update note">
+	          <input type="submit" class="btn btn-info" value="Update note">
 	        </form>
 	      </div>
 	    </div>
