--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 				    <label for="postContent">Post</label>
 				    <textarea input class="form-control" rows="3" id="postContent" placeholder="What is your message?" autofocus> </textarea>
 				  </div>
-				  <button type="submit" class="btn btn-default pull-right">Submit</button>
+				  <button type="submit" class="btn btn-info pull-right">Submit</button>
 				</form>
 		</div>
 	</div>
@@ -67,10 +67,20 @@
 			<div class="col-md-10 col-md-offset-1">
 				<div class="panel note panel-default">
 				  <div class="panel-body">
+				  		
+				  		<!-- delete button -->
+				  		   <button class="close pull-right delete-note" aria-label="Close">
+				  		     <span aria-hidden="true">&times;</span>
+				  		   </button>
+				  		 &nbsp;
+
 				  		<!-- edit link (pencil icon) to toggle form -->
 				        <a class="edit-pencil" data-toggle="collapse" data-target="#update-<%= id %>">
 				          <span class="glyphicon glyphicon-pencil edit pull-right"></span>
 				        </a>
+				        &nbsp;
+	
+
 				    <div class="col-sm-8 col-sm-offset-2">
 					   <h3><%=title%></h3>
 					   <p><%=content%></p>
@@ -80,7 +90,7 @@
 			</div>
 		</div>
 
-	  <!-- form to update notes -->
+	  <!-- form to update each note -->
 	  <div class="row collapse" id="update-<%= id %>">
 	    <div class="col-md-6 col-md-offset-3 panel edit panel-default">
 	  	  <div class="panel-body">
